<resources>
    <string name="app_name">calculator</string>
    <string name="_1">1</string>
    <string name="clr">CLR</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="subtract">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="mul">*</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="info"/>
    <string name="result"/>
    <string name="mult">*</string>
    <string name="_result">result</string>
    <string name="_info">info</string>
    <string name="_infor"/>
    <string name="_resul"/>
    <string name="sin1">Sin</string>
    <string name="cos1">cos</string>
    <string name="tan1">tan</string>
    <string name="division">/</string>
    <string name="info_">TextView</string>
    <string name="del">DEL</string>
</resources>
