<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/clr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginBottom="60dp"
        android:text="@string/clr"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginBottom="60dp"
        android:layout_toEndOf="@+id/clr"
        android:layout_toRightOf="@+id/clr"
        android:text="@string/_0"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/dot1"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="60dp"
        android:layout_toStartOf="@+id/eq"
        android:layout_toLeftOf="@+id/eq"
        android:layout_toEndOf="@+id/zero"
        android:layout_toRightOf="@+id/zero"
        android:text="@string/dot"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/eq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="60dp"
        android:text="@string/equal"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/clr"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginBottom="15dp"
        android:text="@string/_1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/zero"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginBottom="15dp"
        android:layout_toEndOf="@+id/one"
        android:layout_toRightOf="@+id/one"
        android:text="@string/_2"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dot1"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="15dp"
        android:layout_toStartOf="@+id/add1"
        android:layout_toLeftOf="@+id/add1"
        android:text="@string/_3"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/add1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eq"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="15dp"
        android:onClick="onClickOperator"
        android:text="@string/add"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/one"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginBottom="15dp"
        android:text="@string/_4"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/two"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginBottom="15dp"
        android:layout_toEndOf="@+id/four"
        android:layout_toRightOf="@+id/four"
        android:text="@string/_5"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/three"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="15dp"
        android:layout_toStartOf="@+id/minus"
        android:layout_toLeftOf="@+id/minus"
        android:layout_toEndOf="@+id/five"
        android:layout_toRightOf="@+id/five"
        android:text="@string/_6"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="15dp"
        android:onClick="onClickOperator"
        android:text="@string/subtract"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/four"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginBottom="15dp"
        android:text="@string/_7"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/five"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginBottom="15dp"
        android:layout_toEndOf="@+id/seven"
        android:layout_toRightOf="@+id/seven"
        android:text="@string/_8"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/six"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="15dp"
        android:layout_toStartOf="@+id/multiply"
        android:layout_toLeftOf="@+id/multiply"
        android:layout_toEndOf="@+id/eight"
        android:layout_toRightOf="@+id/eight"
        android:text="@string/_9"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/minus"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="15dp"
        android:onClick="onClickOperator"
        android:text="@string/mult"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/Sin_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seven"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginBottom="15dp"
        android:onClick="onClickOperator"
        android:text="@string/sin1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/cos_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eight"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginBottom="15dp"
        android:layout_toEndOf="@+id/Sin_"
        android:layout_toRightOf="@+id/Sin_"
        android:onClick="onClickOperator"
        android:text="@string/cos1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/tan_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nine"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:layout_toStartOf="@+id/div_"
        android:layout_toLeftOf="@+id/div_"
        android:layout_toEndOf="@+id/cos_"
        android:layout_toRightOf="@+id/cos_"
        android:onClick="onClickOperator"
        android:text="@string/tan1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/div_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/multiply"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="15dp"
        android:onClick="onClickOperator"
        android:text="@string/division"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:textSize="50sp"/>


</RelativeLayout>